trying to fixed extra margin below navbar on deploy site only

--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -1,3 +1,4 @@
 .sticky {
     position: sticky;
+    padding-bottom: 20px;
 }
